// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PoolDetailsStats > pool balance chart not visible on mobile 1`] = `
<DocumentFragment>
  .c0 {
  color: #E10F0F;
}

<span
    class=""
    style="display: contents;"
  >
    <div
      class="_flexDirection-_xl_row _backgroundColor-_xl_transparent _flexWrap-_xl_wrap _pr-_xl_t-space-non101 _pl-_xl_t-space-non101 _pt-_xl_t-space-pad1331704900 _pb-_xl_t-space-pad1331704900 _justifyContent-_xl_space-betwe3241 _mt-_xl_0px _display-flex _alignItems-stretch _flexBasis-auto _boxSizing-border-box _position-relative _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-column _gap-t-space-gap1602 _pt-t-space-pad1331704900 _pr-t-space-pad1331704900 _pb-t-space-pad1331704900 _pl-t-space-pad1331704900 _borderTopLeftRadius-t-radius-ro291586424 _borderTopRightRadius-t-radius-ro291586424 _borderBottomRightRadius-t-radius-ro291586424 _borderBottomLeftRadius-t-radius-ro291586424 _backgroundColor-surface2 _width-10037 _zIndex-1 _mt--24px"
    >
      <span
        class="font_body _width-_xl_10037 _display-inline _boxSizing-border-box _whiteSpace-pre-wrap _mt-0px _mr-0px _mb-0px _ml-0px _color-neutral1 _fontFamily-f-family _wordWrap-break-word _fontSize-24px _fontWeight-f-weight-bo3548 _lineHeight-36px"
        data-disable-theme="true"
      >
        Stats
      </span>
      <div
        class="_minWidth-_md_150px _flexBasis-_xl_0px _display-flex _alignItems-stretch _boxSizing-border-box _position-relative _minHeight-0px _flexShrink-1 _flexDirection-column _gap-t-space-gap56 _flexGrow-1 _flexBasis-auto _minWidth-180px"
      >
        <span
          class="font_body _display-inline _boxSizing-border-box _whiteSpace-pre-wrap _mt-0px _mr-0px _mb-0px _ml-0px _color-neutral2 _fontFamily-f-family _wordWrap-break-word _fontSize-f-size-larg101 _fontWeight-f-weight-bo3548 _lineHeight-f-lineHeigh1262266530"
          data-disable-theme="true"
        >
          Pool balances
        </span>
        <div
          class="_flexDirection-_xl_column _display-flex _alignItems-stretch _flexBasis-auto _boxSizing-border-box _position-relative _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-row _justifyContent-space-betwe3241"
        >
          <div
            class="_width-_xl_10037 _display-flex _alignItems-stretch _flexBasis-auto _boxSizing-border-box _position-relative _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-row _width-max-content"
          >
            <div
              class="_display-flex _flexBasis-auto _boxSizing-border-box _position-relative _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-row _alignItems-center _gap-t-space-spa94665589"
            >
              <div
                class="_display-flex _flexBasis-auto _boxSizing-border-box _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-column _alignItems-center _height-20px _justifyContent-center _pointerEvents-auto _width-20px _position-relative"
                data-testid="token-logo"
              >
                <div
                  class="_display-flex _alignItems-stretch _flexBasis-auto _boxSizing-border-box _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-column _opacity-0 _height-9637 _width-9637 _zIndex-0 _backgroundColor-FFFFFF35 _position-absolute _top-237 _left-237 _borderTopLeftRadius-10px _borderTopRightRadius-10px _borderBottomRightRadius-10px _borderBottomLeftRadius-10px"
                />
                <div
                  class="_display-flex _alignItems-stretch _flexBasis-auto _boxSizing-border-box _position-relative _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-column"
                  data-testid="img-token-image"
                >
                  <img
                    height="20"
                    src="https://raw.githubusercontent.com/Uniswap/assets/master/blockchains/ethereum/assets/0xA0b86991c6218b36c1d19D4a2e9Eb0cE3606eB48/logo.png"
                    style="object-fit: contain; border-radius: 10px; z-index: 1;"
                    width="20"
                  />
                </div>
              </div>
              <span
                class="font_body _fontSize-_xl_20px _lineHeight-_xl_28px _display-inline _boxSizing-border-box _whiteSpace-pre-wrap _mt-0px _mr-0px _mb-0px _ml-0px _color-neutral1 _fontFamily-f-family _wordWrap-break-word _fontSize-16px _fontWeight-f-weight-bo3548 _lineHeight-24px"
                data-disable-theme="true"
              >
                90.9M
              </span>
              <a
                data-discover="true"
                href="/explore/tokens/ethereum/0xa0b86991c6218b36c1d19d4a2e9eb0ce3606eb48"
                style="display: flex; align-items: center; cursor: pointer; text-decoration: none; transition-duration: 0.2s; text-decoration-line: none; opacity: 1; transition: 100ms;"
              >
                <span
                  class="font_body _fontSize-_xl_20px _lineHeight-_xl_28px _display-inline _boxSizing-border-box _whiteSpace-pre-wrap _mt-0px _mr-0px _mb-0px _ml-0px _color-neutral1 _fontFamily-f-family _wordWrap-break-word _fontSize-16px _fontWeight-f-weight-bo3548 _lineHeight-24px"
                  data-disable-theme="true"
                >
                  USDC
                </span>
              </a>
            </div>
          </div>
          <div
            class="_width-_xl_10037 _display-flex _alignItems-stretch _flexBasis-auto _boxSizing-border-box _position-relative _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-row _width-max-content"
          >
            <div
              class="_display-flex _flexBasis-auto _boxSizing-border-box _position-relative _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-row _alignItems-center _gap-t-space-spa94665589"
            >
              <div
                class="_display-flex _flexBasis-auto _boxSizing-border-box _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-column _alignItems-center _height-20px _justifyContent-center _pointerEvents-auto _width-20px _position-relative"
                data-testid="token-logo"
              >
                <div
                  class="_display-flex _alignItems-stretch _flexBasis-auto _boxSizing-border-box _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-column _opacity-0 _height-9637 _width-9637 _zIndex-0 _backgroundColor-FFFFFF35 _position-absolute _top-237 _left-237 _borderTopLeftRadius-10px _borderTopRightRadius-10px _borderBottomRightRadius-10px _borderBottomLeftRadius-10px"
                />
                <div
                  class="_display-flex _alignItems-stretch _flexBasis-auto _boxSizing-border-box _position-relative _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-column"
                  data-testid="img-token-image"
                >
                  <img
                    height="20"
                    src="eth-logo.png"
                    style="object-fit: contain; border-radius: 10px; z-index: 1;"
                    width="20"
                  />
                </div>
              </div>
              <span
                class="font_body _fontSize-_xl_20px _lineHeight-_xl_28px _display-inline _boxSizing-border-box _whiteSpace-pre-wrap _mt-0px _mr-0px _mb-0px _ml-0px _color-neutral1 _fontFamily-f-family _wordWrap-break-word _fontSize-16px _fontWeight-f-weight-bo3548 _lineHeight-24px"
                data-disable-theme="true"
              >
                82.5K
              </span>
              <a
                data-discover="true"
                href="/explore/tokens/ethereum/NATIVE"
                style="display: flex; align-items: center; cursor: pointer; text-decoration: none; transition-duration: 0.2s; text-decoration-line: none; opacity: 1; transition: 100ms;"
              >
                <span
                  class="font_body _fontSize-_xl_20px _lineHeight-_xl_28px _display-inline _boxSizing-border-box _whiteSpace-pre-wrap _mt-0px _mr-0px _mb-0px _ml-0px _color-neutral1 _fontFamily-f-family _wordWrap-break-word _fontSize-16px _fontWeight-f-weight-bo3548 _lineHeight-24px"
                  data-disable-theme="true"
                >
                  ETH
                </span>
              </a>
            </div>
          </div>
        </div>
      </div>
      <div
        class="_minWidth-_md_150px _flexBasis-_xl_0px _display-flex _alignItems-stretch _boxSizing-border-box _position-relative _minHeight-0px _flexShrink-1 _flexDirection-column _gap-t-space-gap56 _flexGrow-1 _flexBasis-auto _minWidth-180px"
      >
        <span
          class="font_body _display-inline _boxSizing-border-box _whiteSpace-pre-wrap _mt-0px _mr-0px _mb-0px _ml-0px _color-neutral2 _fontFamily-f-family _wordWrap-break-word _fontSize-f-size-larg101 _fontWeight-f-weight-bo3548 _lineHeight-f-lineHeigh1262266530"
          data-disable-theme="true"
        >
          TVL
        </span>
        <div
          class="_flexDirection-_xl_column _gap-_xl_0px _alignItems-_xl_flex-start _display-flex _flexBasis-auto _boxSizing-border-box _position-relative _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-row _gap-4px _width-10037 _alignItems-flex-end"
        >
          <span
            class="font_body _fontSize-_xl_20px _lineHeight-_xl_28px _display-inline _boxSizing-border-box _whiteSpace-pre-wrap _mt-0px _mr-0px _mb-0px _ml-0px _color-neutral1 _fontFamily-f-family _wordWrap-break-word _fontSize-36px _fontWeight-485 _lineHeight-44px"
            data-disable-theme="true"
          >
            $223.2M
          </span>
          <div
            class="_pt-_lg_0px _pb-_lg_0px _display-flex _alignItems-stretch _flexBasis-auto _boxSizing-border-box _position-relative _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-row _width-max-content _pt-t-space-spa94665589 _pb-t-space-spa94665589"
          >
            <svg
              aria-label="down"
              class="c0"
              fill="none"
              height="16"
              viewBox="0 0 24 24"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M10.6979 16.2453L6.31787 9.75247C5.58184 8.66118 6.2058 7 7.35185 7L16.6482 7C17.7942 7 18.4182 8.66243 17.6821 9.75247L13.3021 16.2453C12.623 17.2516 11.377 17.2516 10.6979 16.2453Z"
                fill="currentColor"
              />
            </svg>
            <span
              class="font_body _display-inline _boxSizing-border-box _whiteSpace-pre-wrap _mt-0px _mr-0px _mb-0px _ml-0px _color-neutral2 _fontFamily-f-family _wordWrap-break-word _fontSize-f-size-larg101 _fontWeight-f-weight-bo3548 _lineHeight-f-lineHeigh1262266530"
              data-disable-theme="true"
            >
              0.37%
            </span>
          </div>
        </div>
      </div>
      <div
        class="_minWidth-_md_150px _flexBasis-_xl_0px _display-flex _alignItems-stretch _boxSizing-border-box _position-relative _minHeight-0px _flexShrink-1 _flexDirection-column _gap-t-space-gap56 _flexGrow-1 _flexBasis-auto _minWidth-180px"
      >
        <span
          class="font_body _display-inline _boxSizing-border-box _whiteSpace-pre-wrap _mt-0px _mr-0px _mb-0px _ml-0px _color-neutral2 _fontFamily-f-family _wordWrap-break-word _fontSize-f-size-larg101 _fontWeight-f-weight-bo3548 _lineHeight-f-lineHeigh1262266530"
          data-disable-theme="true"
        >
          24H volume
        </span>
        <div
          class="_flexDirection-_xl_column _gap-_xl_0px _alignItems-_xl_flex-start _display-flex _flexBasis-auto _boxSizing-border-box _position-relative _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-row _gap-4px _width-10037 _alignItems-flex-end"
        >
          <span
            class="font_body _fontSize-_xl_20px _lineHeight-_xl_28px _display-inline _boxSizing-border-box _whiteSpace-pre-wrap _mt-0px _mr-0px _mb-0px _ml-0px _color-neutral1 _fontFamily-f-family _wordWrap-break-word _fontSize-36px _fontWeight-485 _lineHeight-44px"
            data-disable-theme="true"
          >
            $194.3M
          </span>
          <div
            class="_pt-_lg_0px _pb-_lg_0px _display-flex _alignItems-stretch _flexBasis-auto _boxSizing-border-box _position-relative _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-row _width-max-content _pt-t-space-spa94665589 _pb-t-space-spa94665589"
          >
            <svg
              aria-label="down"
              class="c0"
              fill="none"
              height="16"
              viewBox="0 0 24 24"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M10.6979 16.2453L6.31787 9.75247C5.58184 8.66118 6.2058 7 7.35185 7L16.6482 7C17.7942 7 18.4182 8.66243 17.6821 9.75247L13.3021 16.2453C12.623 17.2516 11.377 17.2516 10.6979 16.2453Z"
                fill="currentColor"
              />
            </svg>
            <span
              class="font_body _display-inline _boxSizing-border-box _whiteSpace-pre-wrap _mt-0px _mr-0px _mb-0px _ml-0px _color-neutral2 _fontFamily-f-family _wordWrap-break-word _fontSize-f-size-larg101 _fontWeight-f-weight-bo3548 _lineHeight-f-lineHeigh1262266530"
              data-disable-theme="true"
            >
              17.75%
            </span>
          </div>
        </div>
      </div>
      <div
        class="_minWidth-_md_150px _flexBasis-_xl_0px _display-flex _alignItems-stretch _boxSizing-border-box _position-relative _minHeight-0px _flexShrink-1 _flexDirection-column _gap-t-space-gap56 _flexGrow-1 _flexBasis-auto _minWidth-180px"
      >
        <span
          class="font_body _display-inline _boxSizing-border-box _whiteSpace-pre-wrap _mt-0px _mr-0px _mb-0px _ml-0px _color-neutral2 _fontFamily-f-family _wordWrap-break-word _fontSize-f-size-larg101 _fontWeight-f-weight-bo3548 _lineHeight-f-lineHeigh1262266530"
          data-disable-theme="true"
        >
          24H fees
        </span>
        <div
          class="_flexDirection-_xl_column _gap-_xl_0px _alignItems-_xl_flex-start _display-flex _flexBasis-auto _boxSizing-border-box _position-relative _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-row _gap-4px _width-10037 _alignItems-flex-end"
        >
          <span
            class="font_body _fontSize-_xl_20px _lineHeight-_xl_28px _display-inline _boxSizing-border-box _whiteSpace-pre-wrap _mt-0px _mr-0px _mb-0px _ml-0px _color-neutral1 _fontFamily-f-family _wordWrap-break-word _fontSize-36px _fontWeight-485 _lineHeight-44px"
            data-disable-theme="true"
          >
            $97.1K
          </span>
        </div>
      </div>
    </div>
    <div
      style="display: contents;"
    />
  </span>
</DocumentFragment>
`;

exports[`PoolDetailsStats > renders stats text correctly 1`] = `
<DocumentFragment>
  .c0 {
  color: #E10F0F;
}

<span
    class=""
    style="display: contents;"
  >
    <div
      class="_flexDirection-_xl_row _backgroundColor-_xl_transparent _flexWrap-_xl_wrap _pr-_xl_t-space-non101 _pl-_xl_t-space-non101 _pt-_xl_t-space-pad1331704900 _pb-_xl_t-space-pad1331704900 _justifyContent-_xl_space-betwe3241 _mt-_xl_0px _display-flex _alignItems-stretch _flexBasis-auto _boxSizing-border-box _position-relative _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-column _gap-t-space-gap1602 _pt-t-space-pad1331704900 _pr-t-space-pad1331704900 _pb-t-space-pad1331704900 _pl-t-space-pad1331704900 _borderTopLeftRadius-t-radius-ro291586424 _borderTopRightRadius-t-radius-ro291586424 _borderBottomRightRadius-t-radius-ro291586424 _borderBottomLeftRadius-t-radius-ro291586424 _backgroundColor-surface2 _width-10037 _zIndex-1 _mt--24px"
    >
      <span
        class="font_body _width-_xl_10037 _display-inline _boxSizing-border-box _whiteSpace-pre-wrap _mt-0px _mr-0px _mb-0px _ml-0px _color-neutral1 _fontFamily-f-family _wordWrap-break-word _fontSize-24px _fontWeight-f-weight-bo3548 _lineHeight-36px"
        data-disable-theme="true"
      >
        Stats
      </span>
      <div
        class="_minWidth-_md_150px _flexBasis-_xl_0px _display-flex _alignItems-stretch _boxSizing-border-box _position-relative _minHeight-0px _flexShrink-1 _flexDirection-column _gap-t-space-gap56 _flexGrow-1 _flexBasis-auto _minWidth-180px"
      >
        <span
          class="font_body _display-inline _boxSizing-border-box _whiteSpace-pre-wrap _mt-0px _mr-0px _mb-0px _ml-0px _color-neutral2 _fontFamily-f-family _wordWrap-break-word _fontSize-f-size-larg101 _fontWeight-f-weight-bo3548 _lineHeight-f-lineHeigh1262266530"
          data-disable-theme="true"
        >
          Pool balances
        </span>
        <div
          class="_flexDirection-_xl_column _display-flex _alignItems-stretch _flexBasis-auto _boxSizing-border-box _position-relative _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-row _justifyContent-space-betwe3241"
        >
          <div
            class="_width-_xl_10037 _display-flex _alignItems-stretch _flexBasis-auto _boxSizing-border-box _position-relative _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-row _width-max-content"
          >
            <div
              class="_display-flex _flexBasis-auto _boxSizing-border-box _position-relative _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-row _alignItems-center _gap-t-space-spa94665589"
            >
              <span
                class="font_body _fontSize-_xl_20px _lineHeight-_xl_28px _display-inline _boxSizing-border-box _whiteSpace-pre-wrap _mt-0px _mr-0px _mb-0px _ml-0px _color-neutral1 _fontFamily-f-family _wordWrap-break-word _fontSize-16px _fontWeight-f-weight-bo3548 _lineHeight-24px"
                data-disable-theme="true"
              >
                90.9M
              </span>
              <a
                data-discover="true"
                href="/explore/tokens/ethereum/0xa0b86991c6218b36c1d19d4a2e9eb0ce3606eb48"
                style="display: flex; align-items: center; cursor: pointer; text-decoration: none; transition-duration: 0.2s; text-decoration-line: none; opacity: 1; transition: 100ms;"
              >
                <span
                  class="font_body _fontSize-_xl_20px _lineHeight-_xl_28px _display-inline _boxSizing-border-box _whiteSpace-pre-wrap _mt-0px _mr-0px _mb-0px _ml-0px _color-neutral1 _fontFamily-f-family _wordWrap-break-word _fontSize-16px _fontWeight-f-weight-bo3548 _lineHeight-24px"
                  data-disable-theme="true"
                >
                  USDC
                </span>
              </a>
            </div>
          </div>
          <div
            class="_width-_xl_10037 _display-flex _alignItems-stretch _flexBasis-auto _boxSizing-border-box _position-relative _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-row _width-max-content"
          >
            <div
              class="_display-flex _flexBasis-auto _boxSizing-border-box _position-relative _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-row _alignItems-center _gap-t-space-spa94665589"
            >
              <span
                class="font_body _fontSize-_xl_20px _lineHeight-_xl_28px _display-inline _boxSizing-border-box _whiteSpace-pre-wrap _mt-0px _mr-0px _mb-0px _ml-0px _color-neutral1 _fontFamily-f-family _wordWrap-break-word _fontSize-16px _fontWeight-f-weight-bo3548 _lineHeight-24px"
                data-disable-theme="true"
              >
                82.5K
              </span>
              <a
                data-discover="true"
                href="/explore/tokens/ethereum/NATIVE"
                style="display: flex; align-items: center; cursor: pointer; text-decoration: none; transition-duration: 0.2s; text-decoration-line: none; opacity: 1; transition: 100ms;"
              >
                <span
                  class="font_body _fontSize-_xl_20px _lineHeight-_xl_28px _display-inline _boxSizing-border-box _whiteSpace-pre-wrap _mt-0px _mr-0px _mb-0px _ml-0px _color-neutral1 _fontFamily-f-family _wordWrap-break-word _fontSize-16px _fontWeight-f-weight-bo3548 _lineHeight-24px"
                  data-disable-theme="true"
                >
                  ETH
                </span>
              </a>
            </div>
          </div>
        </div>
        <div
          class="_display-flex _alignItems-stretch _flexBasis-auto _boxSizing-border-box _position-relative _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-row"
          data-testid="pool-balance-chart"
        >
          <div
            class="_display-flex _alignItems-stretch _flexDirection-column _flexBasis-auto _boxSizing-border-box _position-relative _minHeight-0px _minWidth-0px _flexShrink-0 _height-8px _width-99--9999999641652051975 _backgroundColor-FF37C735 _borderTopLeftRadius-5px _borderBottomLeftRadius-5px _borderTopRightRadius-0px _borderBottomRightRadius-0px _borderRightWidth-1px _borderLeftWidth-0px _borderRightColor-surface2 _borderLeftColor-surface2 _borderTopWidth-0px _borderBottomWidth-0px _borderTopStyle-solid _borderRightStyle-solid _borderBottomStyle-solid _borderLeftStyle-solid"
          />
          <div
            class="_display-flex _alignItems-stretch _flexDirection-column _flexBasis-auto _boxSizing-border-box _position-relative _minHeight-0px _minWidth-0px _flexShrink-0 _height-8px _width-3--51615467631575284714 _backgroundColor-22222235 _borderTopLeftRadius-0px _borderBottomLeftRadius-0px _borderTopRightRadius-5px _borderBottomRightRadius-5px _borderRightWidth-0px _borderLeftWidth-1px _borderRightColor-surface2 _borderLeftColor-surface2 _borderTopWidth-0px _borderBottomWidth-0px _borderTopStyle-solid _borderRightStyle-solid _borderBottomStyle-solid _borderLeftStyle-solid"
          />
        </div>
      </div>
      <div
        class="_minWidth-_md_150px _flexBasis-_xl_0px _display-flex _alignItems-stretch _boxSizing-border-box _position-relative _minHeight-0px _flexShrink-1 _flexDirection-column _gap-t-space-gap56 _flexGrow-1 _flexBasis-auto _minWidth-180px"
      >
        <span
          class="font_body _display-inline _boxSizing-border-box _whiteSpace-pre-wrap _mt-0px _mr-0px _mb-0px _ml-0px _color-neutral2 _fontFamily-f-family _wordWrap-break-word _fontSize-f-size-larg101 _fontWeight-f-weight-bo3548 _lineHeight-f-lineHeigh1262266530"
          data-disable-theme="true"
        >
          TVL
        </span>
        <div
          class="_flexDirection-_xl_column _gap-_xl_0px _alignItems-_xl_flex-start _display-flex _flexBasis-auto _boxSizing-border-box _position-relative _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-row _gap-4px _width-10037 _alignItems-flex-end"
        >
          <span
            class="font_body _fontSize-_xl_20px _lineHeight-_xl_28px _display-inline _boxSizing-border-box _whiteSpace-pre-wrap _mt-0px _mr-0px _mb-0px _ml-0px _color-neutral1 _fontFamily-f-family _wordWrap-break-word _fontSize-36px _fontWeight-485 _lineHeight-44px"
            data-disable-theme="true"
          >
            $223.2M
          </span>
          <div
            class="_pt-_lg_0px _pb-_lg_0px _display-flex _alignItems-stretch _flexBasis-auto _boxSizing-border-box _position-relative _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-row _width-max-content _pt-t-space-spa94665589 _pb-t-space-spa94665589"
          >
            <svg
              aria-label="down"
              class="c0"
              fill="none"
              height="16"
              viewBox="0 0 24 24"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M10.6979 16.2453L6.31787 9.75247C5.58184 8.66118 6.2058 7 7.35185 7L16.6482 7C17.7942 7 18.4182 8.66243 17.6821 9.75247L13.3021 16.2453C12.623 17.2516 11.377 17.2516 10.6979 16.2453Z"
                fill="currentColor"
              />
            </svg>
            <span
              class="font_body _display-inline _boxSizing-border-box _whiteSpace-pre-wrap _mt-0px _mr-0px _mb-0px _ml-0px _color-neutral2 _fontFamily-f-family _wordWrap-break-word _fontSize-f-size-larg101 _fontWeight-f-weight-bo3548 _lineHeight-f-lineHeigh1262266530"
              data-disable-theme="true"
            >
              0.37%
            </span>
          </div>
        </div>
      </div>
      <div
        class="_minWidth-_md_150px _flexBasis-_xl_0px _display-flex _alignItems-stretch _boxSizing-border-box _position-relative _minHeight-0px _flexShrink-1 _flexDirection-column _gap-t-space-gap56 _flexGrow-1 _flexBasis-auto _minWidth-180px"
      >
        <span
          class="font_body _display-inline _boxSizing-border-box _whiteSpace-pre-wrap _mt-0px _mr-0px _mb-0px _ml-0px _color-neutral2 _fontFamily-f-family _wordWrap-break-word _fontSize-f-size-larg101 _fontWeight-f-weight-bo3548 _lineHeight-f-lineHeigh1262266530"
          data-disable-theme="true"
        >
          24H volume
        </span>
        <div
          class="_flexDirection-_xl_column _gap-_xl_0px _alignItems-_xl_flex-start _display-flex _flexBasis-auto _boxSizing-border-box _position-relative _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-row _gap-4px _width-10037 _alignItems-flex-end"
        >
          <span
            class="font_body _fontSize-_xl_20px _lineHeight-_xl_28px _display-inline _boxSizing-border-box _whiteSpace-pre-wrap _mt-0px _mr-0px _mb-0px _ml-0px _color-neutral1 _fontFamily-f-family _wordWrap-break-word _fontSize-36px _fontWeight-485 _lineHeight-44px"
            data-disable-theme="true"
          >
            $194.3M
          </span>
          <div
            class="_pt-_lg_0px _pb-_lg_0px _display-flex _alignItems-stretch _flexBasis-auto _boxSizing-border-box _position-relative _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-row _width-max-content _pt-t-space-spa94665589 _pb-t-space-spa94665589"
          >
            <svg
              aria-label="down"
              class="c0"
              fill="none"
              height="16"
              viewBox="0 0 24 24"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M10.6979 16.2453L6.31787 9.75247C5.58184 8.66118 6.2058 7 7.35185 7L16.6482 7C17.7942 7 18.4182 8.66243 17.6821 9.75247L13.3021 16.2453C12.623 17.2516 11.377 17.2516 10.6979 16.2453Z"
                fill="currentColor"
              />
            </svg>
            <span
              class="font_body _display-inline _boxSizing-border-box _whiteSpace-pre-wrap _mt-0px _mr-0px _mb-0px _ml-0px _color-neutral2 _fontFamily-f-family _wordWrap-break-word _fontSize-f-size-larg101 _fontWeight-f-weight-bo3548 _lineHeight-f-lineHeigh1262266530"
              data-disable-theme="true"
            >
              17.75%
            </span>
          </div>
        </div>
      </div>
      <div
        class="_minWidth-_md_150px _flexBasis-_xl_0px _display-flex _alignItems-stretch _boxSizing-border-box _position-relative _minHeight-0px _flexShrink-1 _flexDirection-column _gap-t-space-gap56 _flexGrow-1 _flexBasis-auto _minWidth-180px"
      >
        <span
          class="font_body _display-inline _boxSizing-border-box _whiteSpace-pre-wrap _mt-0px _mr-0px _mb-0px _ml-0px _color-neutral2 _fontFamily-f-family _wordWrap-break-word _fontSize-f-size-larg101 _fontWeight-f-weight-bo3548 _lineHeight-f-lineHeigh1262266530"
          data-disable-theme="true"
        >
          24H fees
        </span>
        <div
          class="_flexDirection-_xl_column _gap-_xl_0px _alignItems-_xl_flex-start _display-flex _flexBasis-auto _boxSizing-border-box _position-relative _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-row _gap-4px _width-10037 _alignItems-flex-end"
        >
          <span
            class="font_body _fontSize-_xl_20px _lineHeight-_xl_28px _display-inline _boxSizing-border-box _whiteSpace-pre-wrap _mt-0px _mr-0px _mb-0px _ml-0px _color-neutral1 _fontFamily-f-family _wordWrap-break-word _fontSize-36px _fontWeight-485 _lineHeight-44px"
            data-disable-theme="true"
          >
            $97.1K
          </span>
        </div>
      </div>
    </div>
    <div
      style="display: contents;"
    />
  </span>
</DocumentFragment>
`;
